Swagger syncing to Postman, check-and-sync-updates endpoint, backup MongoDB connection URI if SRV doesn't work
